# ident-mash

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs
tests/: case.rs  hash.rs  multi.rs  plain.rs  simple.rs
